Fixed bug that made the layer with previous layers not align properly

--- a/p5js/style.css
+++ b/p5js/style.css
@@ -8,7 +8,7 @@ canvas {
     display: block;
 }
 
-div {
+#column2 {
     color: #ffffff;
     float: left;
     height: 90%;
@@ -16,9 +16,11 @@ div {
 }
 
 #column1 {
+    color: #ffffff;
+    float: left;
     padding: 10px 0;
     height: 96vh;
-    width: 30vh;
+    width: 28vh;
     background-color: #000000;
     display: flex;
     flex-direction: column;
